packages/test-dev-server/tests/fixtures/invalidation/src/parent.js
import { value } from './child';

if (import.meta.hot) {
  import.meta.hot.accept();
}

if (value === 'child-edited') {
  globalThis.nodeFs.writeFileSync('./ok-1', '');
}
